<resources>
    <string name="app_name">Sheet music manager</string>
    <string name="title_home">Home</string>
    <string name="title_sheets">Sheets</string>
    <string name="title_setlists">Setlists</string>

    <!-- Settings -->
    <string name="language">Language</string>
    <string name="dark_mode">Dark mode</string>
    <string name="display_sleep">Keep display on</string>
    <string name="title_settings">Settings</string>
    <string name="start_settings">Start settings</string>
    <string name="display_explanation">The display won\'t turn off</string>


    <string name="text_home_favorite">Favorite</string>
    <string name="describe_add_button">Button for adding</string>
    <string name="text_name">Name</string>
    <string name="text_file">File</string>
    <string name="text_files">Files</string>
    <string name="text_author">Author</string>
    <string name="text_genre">Genre</string>
    <string name="text_key">Key</string>
    <string name="text_instrument">Instrument</string>
    <string name="text_mp3">MP3</string>
    <string name="text_notes">Notes</string>
    <string name="text_address">Address</string>
    <string name="text_tags">Tags</string>
    <string name="text_edit">Edit</string>
    <string name="text_unknown">unknown</string>
    <string name="title_add_setlist">Add setlist</string>
    <string name="title_add_sheetmusic">Add sheetmusic</string>
    <string name="error_rename_favorite">Setlist Favorite can\'t be renamed</string>
    <string name="text_delete">Delete</string>
    <string name="dialog_delete_item">Are you sure you want to delete this item?</string>
    <string name="dialog_title_delete_item">Delete item</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="describe_scroll">Scroll</string>
    <string name="describe_sheet_filter">Filter button</string>
    <string name="describe_remove_button">Remove button</string>
    <string name="describe_edit_button">Edit button</string>
    <string name="no_available_data">No available data</string>
    <string name="dialog_title_show_jpg_or_pdf">Choose</string>
    <string name="pdf">PDF</string>
    <string name="image_jpg_png">Image (JPG/PNG)</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_name_cannot_be_null">Name can\'t be left empty</string>
    <string name="describe_image">Image</string>
    <string name="describe_add_tag">Add a tag</string>
    <string name="dialog_title_new_tag">New tag</string>
    <string name="add">Add</string>
    <string name="tag_already_present">This tag was already added</string>
    <string name="dialog_remove_sheetmusic_from_setlist">Are you sure you want to remove this sheetmusic from the setlist?</string>
    <string name="error_toggle_favorite_in_favorite">Not possible to change in this setlist</string>
    <string name="filter">Filter</string>
    <string name="name">Name</string>
    <string name="text_type">Type</string>
    <string name="text_last_sheetmusic">Last opened</string>
    <string name="title_edit_sheetmusic">Edit sheetmusic</string>
    <string name="title_edit_setlist">Edit setlist</string>
    <string name="play_description">Play button</string>
    <string name="pause_description">Pause button</string>
    <string name="options">Options</string>
    <string name="dialog_show_mp3">Show MP3 options</string>
    <string name="dialog_hide">Hide options</string>
    <string name="dialog_draw">Show draw options</string>
    <string name="no_mp3">No available MP3 file</string>
    <string name="text_undo">Undo</string>
    <string name="text_width">Width</string>
    <string name="text_save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>