<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_sheets"
        android:name="com.example.spravanot.fragments.SheetsFragment"
        android:label="@string/title_sheets"
        tools:layout="@layout/fragment_sheets" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.spravanot.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_setlists"
        android:name="com.example.spravanot.fragments.SetlistsFragment"
        android:label="@string/title_setlists"
        tools:layout="@layout/fragment_setlists" />
</navigation>