<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout     xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.OpenJpgFileActivity"
    android:orientation="vertical">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/open_jpg_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/describe_image"
        >

    </androidx.viewpager.widget.ViewPager>

    <ImageButton
        android:id="@+id/open_jpg_pause_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/pause_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@id/open_jpg_left_guideline"
        app:srcCompat="@drawable/ic_pause"
        android:visibility="gone"/>

    <ImageButton
        android:id="@+id/open_jpg_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/describe_edit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:srcCompat="@android:drawable/ic_menu_edit" />

    <SeekBar
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/open_jpg_bar"
        android:backgroundTint="@color/black"
        app:layout_constraintStart_toEndOf="@id/open_jpg_left_guideline"
        app:layout_constraintEnd_toStartOf="@id/open_jpg_right_guideline"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:visibility="gone"
        />





    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/open_jpg_left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/open_jpg_right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />


</androidx.constraintlayout.widget.ConstraintLayout>