<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/sheetmusicLayout">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:id="@+id/sheets_card"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <TextView
                android:id="@+id/sheetmusic_name_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text_name"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/sheets_row_left_guideline"
                app:layout_constraintEnd_toStartOf="@id/sheetmusic_favorite_button"
                app:layout_constraintBottom_toTopOf="@id/sheets_row_center_guideline" />

            <TextView
                android:id="@+id/sheetmusic_author_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/text_author"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@id/sheetmusic_favorite_button"
                app:layout_constraintStart_toStartOf="@id/sheets_row_left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/sheets_row_center_guideline" />

            <ImageButton
                android:id="@+id/sheetmusic_edit_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/text_edit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/sheets_row_right_guideline"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"
                app:srcCompat="@drawable/ic_edit" />

            <ImageButton
                android:id="@+id/sheetmusic_favorite_button"
                android:contentDescription="@string/text_home_favorite"
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:srcCompat="@drawable/ic_heart_empty"
                android:background="?android:selectableItemBackground"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/sheetmusic_edit_button"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/sheets_row_center_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/sheets_row_left_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.07" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/sheets_row_right_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>