<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddSetlistActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/add_setlist_left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/add_setlist_center_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/add_setlist_right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/add_setlist_name_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.11" />



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/add_setlist_notes_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/add_setlist_tags_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/add_setlist_add_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.92" />


    <TextView
        android:id="@+id/add_setlist_name_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_name"
        app:layout_constraintBottom_toBottomOf="@id/add_setlist_name_guideline"
        app:layout_constraintEnd_toStartOf="@id/add_setlist_center_guideline"
        app:layout_constraintStart_toStartOf="@id/add_setlist_left_guideline"
        app:layout_constraintHorizontal_bias="0.0"
        />


    <TextView
        android:id="@+id/add_setlist_notes_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_notes"
        app:layout_constraintBottom_toBottomOf="@id/add_setlist_notes_guideline"
        app:layout_constraintEnd_toStartOf="@id/add_setlist_center_guideline"
        app:layout_constraintStart_toStartOf="@id/add_setlist_left_guideline"
        app:layout_constraintHorizontal_bias="0.0"
        />

    <TextView
        android:id="@+id/add_setlist_tags_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_tags"
        app:layout_constraintBottom_toBottomOf="@id/add_setlist_tags_guideline"
        app:layout_constraintEnd_toStartOf="@id/add_setlist_center_guideline"
        app:layout_constraintStart_toStartOf="@id/add_setlist_left_guideline"
        app:layout_constraintHorizontal_bias="0.0"
        />

    <EditText
        android:id="@+id/add_setlist_name_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:hint="@string/text_name"
        app:layout_constraintBottom_toBottomOf="@id/add_setlist_name_guideline"
        app:layout_constraintEnd_toStartOf="@id/add_setlist_right_guideline"
        app:layout_constraintStart_toStartOf="@id/add_setlist_center_guideline"
        app:layout_constraintHorizontal_bias="0.0"
        />

    <EditText
        android:id="@+id/add_setlist_notes_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:hint="@string/text_notes"
        app:layout_constraintBottom_toBottomOf="@id/add_setlist_notes_guideline"
        app:layout_constraintStart_toStartOf="@id/add_setlist_center_guideline"
        app:layout_constraintEnd_toStartOf="@id/add_setlist_right_guideline"
        app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
        android:id="@+id/add_setlist_tags_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@id/add_setlist_tags_guideline"
        app:layout_constraintEnd_toStartOf="@id/add_setlist_right_guideline"
        app:layout_constraintStart_toStartOf="@id/add_setlist_center_guideline"
        app:layout_constraintHorizontal_bias="0.0"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_setlist_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/describe_add_button"
        app:srcCompat="@android:drawable/ic_menu_save"
        app:layout_constraintBottom_toBottomOf="@id/add_setlist_add_guideline"
        app:layout_constraintEnd_toStartOf="@id/add_setlist_right_guideline" />


    <ImageButton
        android:id="@+id/add_setlist_edit_tags_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/describe_edit_button"
        app:srcCompat="@android:drawable/ic_menu_edit"
        app:layout_constraintBottom_toBottomOf="@id/add_setlist_tags_guideline"
        app:layout_constraintEnd_toStartOf="@id/add_setlist_right_guideline"
        app:layout_constraintHorizontal_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>

